--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-sudo: required
 language: generic
+sudo: required
 services:
   - docker
 
@@ -10,4 +10,4 @@ before_install:
 
 
 script:
-  - docker run -e CI=true ashok2380/docker-react npm run test
+  - docker run ashok2380/docker-react npm run test -- --coverage
