--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_install:
 
 
 script:
-  - docker run ashok2380/docker-react npm run test -- --coverage
+  - docker run -e CI=true ashok2380/docker-react npm run test
