--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,16 @@ before_install:
 
 script:
   - docker run -e CI=true ashok2380/docker-react npm run test
+
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "Docker-React"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-206338736328"
+  bucket_path: "Docker-React"
+  on:
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
